# AI-Piping-Test

./: .env_sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
app/: constants.py  main.py  models.py  service.py  settings.py
app/tests/: factories.py  test_main.py  test_service.py
