[tool.poetry]
name = "ai-piping"
version = "0.1.0"
description = "Ai Piping hiring test"
authors = ["Hung Pham <hung2212@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
openai = "^1.30.3"
pydantic-settings = "^2.2.1"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
